fixed layout - debugging extra padding right

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -286,6 +286,7 @@ width: 100%
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-items: center;
   gap: 15px;
   margin-top: 20px;
   width: 100%;
@@ -297,11 +298,12 @@ width: 100%
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    align-items: center;
   }
 
   .products-container > * {
-    flex: 0 0 calc(25% - 15px);
-    max-width: calc(25% - 15px);
+    flex: 0 0 calc(25% - 11.25px);
+    max-width: calc(25% - 11.25px);
     min-width: 310px; /* Ensure product cards can accommodate small-images-container */
   }
 }
@@ -309,7 +311,7 @@ width: 100%
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: 'center';
+  align-items: center;
   padding-bottom: 60px;
 
 }
